<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RefineActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_refine_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_title_toolbar_ref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textStyle="bold"
                tools:text="Main Title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sub_title_img_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_location_toolbar" />

                <TextView
                    android:id="@+id/sub_title_toolbar_ref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_sub_title_text_size"
                    android:textStyle="bold"
                    tools:text="Sub Title" />
            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_drop_down_shadow" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/sel_your_stat"
        android:textColor="@color/toolbar_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        app:boxStrokeColor="@color/toolbar_color">

        <AutoCompleteTextView
            android:id="@+id/auto_comp_tv_stat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/first_item" />


    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/div_hgt"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:background="#6FA2CF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/bro_br_msg"
        android:textColor="@color/toolbar_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:boxStrokeColor="@color/toolbar_color"
        app:counterEnabled="true"
        app:counterMaxLength="250">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/broadcast_brief_msg_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/toolbar_color"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/div_hgt"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:background="#6FA2CF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/nearby_dist"
        android:textColor="@color/toolbar_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck"
        android:valueFrom="0.5"
        android:valueTo="100"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:max="100" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/seek_bar_tv_start"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/_500m"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:textColor="@color/toolbar_color"
        />
    <TextView
        android:id="@+id/seek_bar_tv_end"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/_100_km"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textColor="@color/toolbar_color"
        />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/div_hgt"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:background="#6FA2CF" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_purpose"
        android:textColor="@color/toolbar_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/coffee_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customized_button"
            android:text="@string/coffee"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/business_btn"
            android:layout_width="115dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:layout_toEndOf="@id/coffee_btn"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null"
            />

        <Button
            android:id="@+id/hobbies_btn"
            android:layout_width="110dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:layout_toEndOf="@id/business_btn"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null"
            />

        <Button
            android:id="@+id/friendship_btn"
            android:layout_width="110dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_btn"
            android:text="@string/friendship"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null"
            android:layout_alignStart="@id/coffee_btn"
            />

        <Button
            android:id="@+id/movie_btn"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:layout_toEndOf="@id/coffee_btn"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null"
            android:layout_alignTop="@+id/friendship_btn"
            android:layout_alignEnd="@+id/business_btn" />

        <Button
            android:id="@+id/dining_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/dining"
            android:layout_toEndOf="@id/business_btn"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null"
            android:layout_below="@+id/hobbies_btn"
            android:layout_alignEnd="@+id/hobbies_btn"
            />

        <Button
            android:id="@+id/dating_btn"
            android:layout_height="wrap_content"
            android:layout_width="110dp"
            android:text="@string/dating"
            android:layout_below="@+id/friendship_btn"
            android:layout_alignStart="@+id/friendship_btn"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null"/>

        <Button
            android:id="@+id/matrimony_btn"
            android:layout_height="wrap_content"
            android:layout_width="115dp"
            android:text="@string/matrimony"
            android:layout_alignTop="@+id/dating_btn"
            android:layout_alignStart="@+id/friendship_btn"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null" />
    </RelativeLayout>

</LinearLayout>