<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ExploreActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_explore_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_title_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textStyle="bold"
                tools:text="Main Title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sub_title_img_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_location_toolbar" />

                <TextView
                    android:id="@+id/sub_title_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_sub_title_text_size"
                    android:textStyle="bold"
                    tools:text="Sub Title" />
            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/layout_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tab_bac_color"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@android:color/white"
            android:elevation="10dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/individual"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professional"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/merchant"/>

        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_tab"/>
    </RelativeLayout>

</LinearLayout>