<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color">

        <TextView
            android:id="@+id/main_title_toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold"
            tools:text="Main Title" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_drop_down_shadow" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clk_btn_activity"
            android:layout_marginBottom="23dp"
            android:textColor="@color/toolbar_color"
            android:gravity="center"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/refine_screen_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refine_screen"
            android:textColor="@color/toolbar_color"
            android:layout_marginBottom="20dp"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null" />
        <Button
            android:id="@+id/explore_screen_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore_screen"
            android:textColor="@color/toolbar_color"
            android:background="@drawable/customized_button"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>